WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152521
FTL B3 should use the right type for comparison slow paths
https://bugs.webkit.org/show_bug.cgi?id=152521
Summary
FTL B3 should use the right type for comparison slow paths
Filip Pizlo
Reported
2015-12-22 18:09:39 PST
Patch forthcoming.
Attachments
the patch
(1.38 KB, patch)
2015-12-22 18:10 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-12-22 18:10:46 PST
Created
attachment 267819
[details]
the patch
Saam Barati
Comment 2
2015-12-22 18:11:40 PST
Comment on
attachment 267819
[details]
the patch r=me
Filip Pizlo
Comment 3
2015-12-22 18:34:28 PST
Landed in
http://trac.webkit.org/changeset/194383
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug