FTL B3 should use the right type for comparison slow paths https://bugs.webkit.org/show_bug.cgi?id=152521

Reviewed by Saam Barati.

Fixes a small goof that was leading to B3 validation failures.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::DFG::LowerDFGToLLVM::nonSpeculativeCompare):



Canonical link: https://commits.webkit.org/170621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194383 268f45cc-cd09-0410-ab3c-d52691b4dbfc